--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
@@ -22,7 +22,7 @@ through table column expressions:
 
 | Table                                   | Python DSL                                  | JSON DSL
 | ----------------------------------------| ------------------------------------------- | ----------------------------------------------------
-| Timeseries                              | `Timeseries.col(<resource>).field(<field>)` | `{ "timeseries: "<resource>", "field": "<field>" }`
+| Timeseries                              | `Timeseries.col(<resource>).field(<field>)` | `{ "timeseries": "<resource>", "field": "<field>" }`
 
 
 **Shared Source Attributes:**
