--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
@@ -138,7 +138,7 @@ This is similar to the generic `GROUP BY` clause in SQL.
 
 | Argument                          | Remarks
 | --------------------------------- | ---------------
-| timeseries / \<summary\>          | The data column to group by. This can be any of the [Timeseries Resource fields](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#timeseries%3A) or [Summaries](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#summaries%3A).
+| timeseries / \<summary\>          | The data column to group by. This can be any of the [Timeseries](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#timeseries%3A) or [Summary](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#summaries%3A) columns.
 | source                            | The source column to group by. This can be any of the [Source Columns](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#source-columns%3A)
 
 </Accordion>
