--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
@@ -40,8 +40,8 @@ different tables in the same query instruction.
 | Provider                              | `Source.col("source_provider")`      | `{ "source": "source_provider" }`  |
 | Source type                           | `Source.col("source_type")`          | `{ "source": "source_type" }`      |
 | Source App ID                         | `Source.col("source_app_id")`        | `{ "source": "source_app_id" }`    | available in summaries only
-| Workout ID                            | `Source.col("source_workout_id")`    | `{ "source": "source_workout_id"}` | available in the Workout summaries and a few timeseries resource eg. `workout_distance` or `workout_swimming_stroke`
-| Sport                                 | `Source.col("source_sport")`         | `{ "source": "source_sport" }`     | available in the Workout summaries and a few timeseries resource eg. `workout_distance` or `workout_swimming_stroke`
+| Workout ID                            | `Source.col("source_workout_id")`    | `{ "source": "source_workout_id"}` | available in a few timeseries resource eg. `workout_distance` or `workout_swimming_stroke`
+| Sport                                 | `Source.col("source_sport")`         | `{ "source": "source_sport" }`     | available in a few timeseries resource eg. `workout_distance` or `workout_swimming_stroke`
 
 <Note>
 Column expressions for Electrocardiogram, Sleep Cycle, Menstrual Cycle and lab testing biomarkers are planned to be introduced in the future.
