--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
@@ -128,7 +128,7 @@ va.select(...).group_by(
 ```
 </CodeGroup>
 
-## Group by any column from the table expression
+## Group by any Table Column or Source Column expression
 
 Group the input rows based on a resource specific column or a shared source column.
 This is similar to the generic `GROUP BY` clause in SQL.
