--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause.mdx
@@ -128,9 +128,9 @@ va.select(...).group_by(
 ```
 </CodeGroup>
 
-## Group by any Table Column or Source Column expression
+## Group by any Table or Source Column expression
 
-Group the input rows based on a resource specific column or a shared source column.
+Group the input rows based on any Table or Source Column expression.
 This is similar to the generic `GROUP BY` clause in SQL.
 
 <AccordionGroup>
@@ -138,8 +138,8 @@ This is similar to the generic `GROUP BY` clause in SQL.
 
 | Argument                          | Remarks
 | --------------------------------- | ---------------
-| timeseries / \<summary\>          | The data column to group by. This can be any of the [Timeseries](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#timeseries%3A) or [Summary](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#summaries%3A) columns.
-| source                            | The source column to group by. This can be any of the [Source Columns](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#source-columns%3A)
+| Table column expression           | This can be any of the [Timeseries Column expressions](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#timeseries%3A) or [Summary Column expressions](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#summaries%3A) columns.
+| Source column expression          | This can be any of the [Source Column expressions](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#source-columns%3A)
 
 </Accordion>
 
