link to column expression docs

--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -8,7 +8,7 @@ import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
 <HorizonAIBeta />
 
-We have added the ability to **group the input rows by any Table or Source Column expression** in the Horizon AI Query DSL, applicable to both summary and timeseries resources.
+We have added the ability to **group the input rows by any [Table or Source Column expression](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions)** in the Horizon AI Query DSL, applicable to both summary and timeseries resources.
 This gives you more flexibility to analyze your health data across different dimensions — including source providers, source types or any resource specific fields.
 
 Check out the [Group By clause](/api-reference/horizon-ai/aggregation/query-dsl/group-by-clause) documentation.
