--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/column-expressions.mdx
@@ -8,13 +8,6 @@ icon: table-columns
 Your Query Instruction can pull data from [Vital resources](/wearables/providers/resources)
 through table column expressions:
 
-| Table                                 | Python DSL            | JSON DSL                    
-| ------------------------------------- | --------------------- | ----------------------------
-| Activity daily summary<br/>`activity` | `Activity.col("$1")`  | `{ "activity": "$1" }`
-| Body summary<br/>`body`               | `Body.col("$1")`      | `{ "body": "$1" }`
-| Sleep summary<br/>`sleep`             | `Sleep.col("$1")`     | `{ "sleep": "$1" }`
-| Workout summary<br/>`workout`         | `Workout.col("$1")`   | `{ "workout": "$1" }`
-
 Each Table Column expression can select one column (a field) of the table (the Vital resource).
 You can use multiple Table Column expressions to select multiple columns in the same query.
 
@@ -23,11 +16,36 @@ Cross-table query instruction is not supported — you cannot mix Table Column e
 different tables in the same query instruction.
 </Info>
 
-<Note>
-Column expressions for summary types, timeseries types as well as lab testing biomarkers
-are planned to be introduced gradually.
-</Note>
+#### Summaries:
 
+| Table                                 | Python DSL            | JSON DSL                    
+| ------------------------------------- | --------------------- | ----------------------------
+| Activity daily summary<br/>`activity` | `Activity.col("$1")`  | `{ "activity": "$1" }`
+| Body summary<br/>`body`               | `Body.col("$1")`      | `{ "body": "$1" }`
+| Sleep summary<br/>`sleep`             | `Sleep.col("$1")`     | `{ "sleep": "$1" }`
+| Workout summary<br/>`workout`         | `Workout.col("$1")`   | `{ "workout": "$1" }`
+| Meal summary<br/>`meal`               | `Meal.col("$1")`      | `{ "meal": "$1" }`
+
+#### Timeseries:
+
+| Table                                   | Python DSL                                  | JSON DSL
+| ----------------------------------------| ------------------------------------------- | ----------------------------------------------------
+| Timeseries Resource fields              | `Timeseries.col("$1").field("$2")`          | `{ "timeseries": "$1", "field": "$2"}`
+
+
+#### Source Columns:
+
+| Column                                | Python DSL                           | JSON DSL                           | Available in
+| ------------------------------------- | ------------------------------------ | -----------------------------------|-----------------------------
+| Provider                              | `Source.col("source_provider")`      | `{ "source": "source_provider" }`  | All Tables
+| Source type                           | `Source.col("source_type")`          | `{ "source": "source_type" }`      | All Tables
+| Source App ID                         | `Source.col("source_app_id")`        | `{ "source": "source_app_id" }`    | All summary tables
+| Workout ID                            | `Source.col("source_workout_id")`    | `{ "source": "source_workout_id"}` | Workout Stream timeseries only
+| Sport                                 | `Source.col("source_sport")`         | `{ "source": "source_sport" }`     | Workout Stream timeseries only
+
+<Note>
+Column expressions for Electrocardiogram, Sleep Cycle, Menstrual Cycle and lab testing biomarkers are planned to be introduced in the future.
+</Note>
 
 ### Index Column expression
 
