--- a/docs/lab/on-site-collection/overview.mdx
+++ b/docs/lab/on-site-collection/overview.mdx
@@ -5,8 +5,7 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
-On-site collections are one of our offered modalities.
-This modality is focused on patients that are able to go to a Laboratory to have their blood drawn.
+On-site collections are one of our offered modalities. Their locations are customer-managed settings where blood draws occur outside of traditional lab-owned patient service centers — such as primary care clinics, employer health centers, or event-based wellness pop-ups.
 
 ## Ordering Flow overview
 
@@ -14,8 +13,8 @@ To achieve this, a high-level overview of the process is defined as:
 
 - An order is placed in Junction's system through our Dashboard or API.
 - The order is added to a background queue and additional checks are made before a test requisition is created with the chosen Laboratory.
-- After the requisition is created, some form of communication is carried out with the patient so he can go to the assigned partner Laboratory.
-- After that, the patient can go at any time they want to the laboratory to have their blood drawn.
+- After the requisition is created, some form of communication is carried out with the patient.
+- After that, the patient can go at any time they want to the draw location to have their blood drawn.
 - The Laboratory processes the patient's blood sample and generates the required results.
 - Junction exposes the results via API as soon as they are available, both on PDF and structured data via API.
 
