--- a/docs/lab/overview/turnaround-times.mdx
+++ b/docs/lab/overview/turnaround-times.mdx
@@ -9,8 +9,8 @@ For a comprehensive Dashboard-focused overview of turnaround times, check out [t
 
 We have two different turnaround time metrics:
 
-1. Common turnaround time which 95% of orders should fall within
-2. Worst-case turnaround time which 99% of orders should fall within
+1. Common turnaround time which 95% of orders should fall within.
+2. Worst-case turnaround time which 99% of orders should fall within.
 
 Furthermore, each operates on three distinct levels:
 
@@ -20,17 +20,17 @@ Furthermore, each operates on three distinct levels:
 
 ## Marker turnaround times
 
-Marker turnaround times are based on historical orders of each marker. If a marker has been ordered enough such that we can make a statistically-viable determination on its average turnaround time, we will include these in payloads containing marker data. For example, the response body [retrieving markers for a lab test](https://docs.junction.com/api-reference/lab-testing/lab-test-markers) includes the common and worst-case number of days to receive results for that marker after collection time. If we don't have enough data for that marker, those values will be null.
+Marker turnaround times are based on historical orders of each marker. If a marker has been ordered enough such that we can make a statistically-viable determination on its average turnaround time, we will include these in payloads containing marker data. For example, the response body for [retrieving markers for a lab test](https://docs.junction.com/api-reference/lab-testing/lab-test-markers) includes the common and worst-case number of days to receive results for that marker after collection time. If we don't have enough data for that marker, those values will be null.
 
 ## Panel turnaround times
 
-Panels comprise of one or more markers, and the turnaround time for the panel is largest turnaround time among its consistuent markers. Just like in marker response bodies, lab test response bodies return the common and worst-case turnaround times (in days) for the panel. You can see this when [getting all available tests](https://docs.junction.com/api-reference/lab-testing/tests-paginated), for example. If any of the markers in the panel have null turnaround times, then the panel also has a null turnarount time.
+Panels comprise of one or more markers, and the turnaround time for the panel is the largest turnaround time among its constituent markers. Just like in marker response bodies, lab test response bodies return the common and worst-case turnaround times (in days) for the panel. You can see this when [getting all available tests](https://docs.junction.com/api-reference/lab-testing/tests-paginated), for example. If any of the markers in the panel have null turnaround times, then the panel also has a null turnarount time.
 
 ## Order turnaround times
 
-An orders turnaround time is the same as its panel, so we don't repeat that information in the top level order response body. You can still find that information in the `lab_test` object within the response body if you need it. Instead, the top level body includes two related fields:
+An order's turnaround time is the same as its panel, so we don't repeat that information in the top level order response body. You can still find that information in the `lab_test` object within the response body if you need it. Instead, the top level body includes two related fields:
 
 1. Expected result by date
 2. Worst-case result by date
 
-These will be null unless the order's lab test has a non-null turnarount time _and_ the sample collection has already been performed. The time of sample collection is the what we add the panel turnaround times too to determine the expected and worst-case result by dates. [Retrieving an order](https://docs.junction.com/api-reference/lab-testing/get-order) is an example of where this is included.
+These will be null unless the order's lab test has a non-null turnarount time _and_ the sample collection has already been performed. The time of sample collection is what we add to the panel turnaround times to determine the expected and worst-case result by dates. [Retrieving an order](https://docs.junction.com/api-reference/lab-testing/get-order) is an example of where this is included.
